updated mmo voting notebook

--- a/notebooks/5.3-mmo_voting.ipynb
+++ b/notebooks/5.3-mmo_voting.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "1424822f-36ad-4fbc-aee5-c6b2753304d3",
+   "id": "50d52c28-8bcd-4420-bad2-a06332de29bc",
    "metadata": {},
    "source": [
     "sample = pd.read_parquet(os.path.join(PATHS.metadata, 'samples', 'df_documents_sample_4k_3.parquet'))\n",
@@ -168,7 +168,9 @@
     "y_val = labels[data_sets.data_set == \"val\"]\n",
     "\n",
     "X_test = features[data_sets.data_set == \"test\"]\n",
-    "y_test = labels[data_sets.data_set == \"test\"]"
+    "y_test = labels[data_sets.data_set == \"test\"]\n",
+    "\n",
+    "del features, labels, data_sets"
    ]
   },
   {
@@ -282,9 +284,7 @@
   {
    "cell_type": "markdown",
    "id": "a504ce29-6188-41ad-84e8-d9ca0bbf6101",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 5.1. Averaging "
    ]
@@ -303,9 +303,7 @@
   {
    "cell_type": "markdown",
    "id": "09f543d6-47e4-441d-b60f-da1c7436abe0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 5.2. Max value"
    ]
@@ -333,13 +331,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc12516-235c-45f8-a198-aab729562b87",
+   "id": "a919deff-747e-4c2f-bec5-d1bd1709136b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "accuracies = []\n",
-    "for alpha in tqdm(np.linspace(0,1, 21)):\n",
+    "for alpha in tqdm(np.linspace(0,1, 101)):\n",
     "    multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method=\"weighted\", weights = (alpha, 1-alpha))\n",
     "    accuracies.append([alpha, accuracy_score(y_val, multimodal_voter.predict(X_val))])"
    ]
@@ -347,17 +345,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388c7be3-da7a-41f0-99fb-1daeea0fcc93",
+   "id": "0a7d499a-d88e-43dd-b26f-200e5d90bc47",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8,8))\n",
+    "plt.plot((0,0.49),(0.8421, 0.842), 'r--', lw=1)\n",
+    "plt.plot((0.49,0.49),(0.55, 0.842), 'r--', lw=1)\n",
     "plt.plot(\n",
     "    tuple(r[0] for r in accuracies),\n",
     "    tuple(r[1] for r in accuracies)\n",
     ")\n",
+    "\n",
+    "plt.xticks(list(plt.xticks()[0]) + [0.49])\n",
+    "plt.yticks(list(plt.yticks()[0]) + [0.842])\n",
+    "\n",
+    "# Colorer le tick x = 0.49 en rouge\n",
+    "for label in plt.gca().get_xticklabels():\n",
+    "    if label.get_text() == '0.49':\n",
+    "        label.set_color('red')\n",
+    "\n",
+    "# Colorer le tick y = 0.8421 en rouge\n",
+    "for label in plt.gca().get_yticklabels():\n",
+    "    if label.get_text() == '0.842':\n",
+    "        label.set_color('red')\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(0.55, 0.87)\n",
     "plt.grid()\n",
-    "plt.title(\"Weighted model - Accuracy en fonction du poids texte/image\")"
+    "plt.xlabel(\"Ratio\\n(0 = text only // 1 = image only)\")\n",
+    "plt.ylabel(\"Exactitude (données de validation)\")\n",
+    "plt.title(\"Weighted voter - Exactitude en fonction du poids texte/image\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3761af7-4a79-4ed8-ac28-1e45fe47adfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ratio |accuracy\")\n",
+    "print(\"------+--------\")\n",
+    "for al, ac in accuracies[40:60]:\n",
+    "    print(f\"{al:.2f}  | {100*ac:.2f}%\")"
    ]
   },
   {
@@ -367,8 +397,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method=\"weighted\", weights = (0.45, 0.55))\n",
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"0.45-weighted Voter\", compare_with_components=True)"
+    "multimodal_voter = MultiModalVoter(img_model, img_pipeline, txt_model, txt_pipeline, method=\"weighted\", weights = (0.49, 0.51))\n",
+    "visual_classification_report(multimodal_voter, X_test, y_test, \"0.49-weighted Voter\", compare_with_components=True)"
    ]
   },
   {
@@ -387,7 +417,7 @@
    "outputs": [],
    "source": [
     "multimodal_voter = MultiModalClassWeightedVoter(img_model, img_pipeline, txt_model, txt_pipeline)\n",
-    "multimodal_voter.fit(X_train, y_train)"
+    "multimodal_voter.fit(X_val, y_val)"
    ]
   },
   {
@@ -397,37 +427,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_classification_report(multimodal_voter, X_test, y_test, \"Class-Weighted voter\", compare_with_components=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "664020b0-a4d7-447e-a406-f332ab24ffdd",
-   "metadata": {},
-   "source": [
-    "## 7. Regression logistique"
+    "visual_classification_report(multimodal_voter, X_test, y_test, \"Class-Weighted voter\", compare_with_comp@bonents=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac611e8-7941-4ca0-a469-10dcf60ca54e",
+   "id": "837f8315-14db-4561-b03f-1da40a981395",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MultiModalLogisticRegressor(img_pipeline, img_model, txt_pipeline, txt_model)\n",
-    "model.fit(X_train, y_train)"
+    "max(txt_weights), min(txt_weights)\n",
+    "print(\" class | txt weight | img weight \")\n",
+    "print(\"-------+------------+------------\")\n",
+    "for c, (t, i) in enumerate(zip(txt_weights, img_weights)):\n",
+    "    print(f\"   {c:02d}  |    {t:.2f}    |    {i:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad67c0ac-9daa-4ce6-b6f3-ec43343c7974",
+   "id": "1d13f29c-d7e7-4482-909e-346bb078248e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_classification_report(model, X_test, y_test, \"Logistic Regressor\", compare_with_components=True)"
+    "txt_weights = (multimodal_voter.txt_weights/multimodal_voter.weights_sum).flatten()\n",
+    "img_weights = (multimodal_voter.img_weights/multimodal_voter.weights_sum).flatten()\n",
+    "\n",
+    "indices = np.arange(len(txt_weights))\n",
+    "\n",
+    "plt.bar(indices, np.ones(16), alpha = 0.75) # pour \"sauter la couleur bleue et retrouver les couleurs des graphes précédents\n",
+    "plt.bar(indices, img_weights, bottom=txt_weights, label='image model', alpha = 0.75)\n",
+    "plt.bar(indices, txt_weights, label='text model', alpha = 0.75)\n",
+    "\n",
+    "plt.ylabel('Poids')\n",
+    "plt.xlabel('Classe')\n",
+    "plt.title('Valeurs des poids par classe associés aux modèles constitutifs')\n",
+    "plt.xticks(indices)\n",
+    "plt.ylim(0, 1.05)\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e275c07-76b2-4627-bb64-dc2a4e60df9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
