--- a/notebooks/1.1-rvl-cdip-data-retrieval.ipynb
+++ b/notebooks/1.1-rvl-cdip-data-retrieval.ipynb
@@ -16,7 +16,7 @@
     "## README\n",
     "Ce notebook permet de télécharger sur le site de huggingface les images de la BDD RVL-CDIP.\n",
     "\n",
-    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la configuration des répertoires du projet\n",
     "\n",
     "A l'issue (chapitre 2), il télécharge l'ensemble des documents de la BDD RVL-CDIP puis décompresse les fichiers téléchargés.\n",
     "\n",
@@ -35,6 +35,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84eee646-804f-4c97-891d-0341d5437009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27a80f19-05e8-400a-9cfa-78c06ae1cbb0",
    "metadata": {},
    "outputs": [],
@@ -43,43 +60,7 @@
     "import time\n",
     "import tarfile\n",
     "import requests\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from utils import remove_ds_store_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8fc2081-3618-4bee-ab4e-c7cfd42450e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_path = '/Users/ben/Work/mle/ds-project/mai25_bds_extraction/' # à modifier par chacun en fonction de son arborescence\n",
-    "\n",
-    "data_path = os.path.join(project_path, 'data')\n",
-    "raw_data_path = os.path.join(data_path, 'raw')\n",
-    "extracted_data_path = os.path.join(data_path, 'extracted')\n",
-    "processed_data_path = os.path.join(data_path, 'processed')\n",
-    "\n",
-    "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
-    "rvl_cdip_images_path = os.path.join(raw_rvl_cdip_path, 'images')\n",
-    "rvl_cdip_labels_path = os.path.join(raw_rvl_cdip_path, 'labels')\n",
-    "\n",
-    "iit_cdip_images_path = os.path.join(raw_data_path, 'IIT-CDIP', 'images')\n",
-    "iit_cdip_xmls_path = os.path.join(raw_data_path, 'IIT-CDIP', 'xmls')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0069ff8-8bf9-4554-b92f-79cc6044a295",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(rvl_cdip_images_path, exist_ok=True)\n",
-    "os.makedirs(rvl_cdip_labels_path, exist_ok=True)"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -107,7 +88,7 @@
    "source": [
     "# Téléchargement de l'archive\n",
     "url = \"https://huggingface.co/datasets/aharley/rvl_cdip/resolve/main/data/rvl-cdip.tar.gz?download=true\"\n",
-    "tar_file_path = os.path.join(raw_rvl_cdip_path, \"rvl-cdip.tar.gz\")\n",
+    "tar_file_path = PATHS.rvl_cdip / \"rvl-cdip.tar.gz\"\n",
     "\n",
     "# Stream download with progress bar\n",
     "response = requests.get(url, stream=True)\n",
@@ -135,7 +116,7 @@
    "source": [
     "# Extraction des images\n",
     "with tarfile.open(tar_file_path, \"r:gz\") as archive:\n",
-    "    archive.extractall(path=raw_rvl_cdip_path)"
+    "    archive.extractall(path=PATHS.rvl_cdip)"
    ]
   },
   {
@@ -146,11 +127,7 @@
    "outputs": [],
    "source": [
     "# Suppression du fichier archive\n",
-    "from pathlib import Path\n",
-    "\n",
-    "images_path = Path(rvl_cdip_images_path)\n",
-    "image_files = list(images_path.rglob(\"*.tif\"))\n",
-    "\n",
+    "image_files = list(PATHS.rvl_cdip_images.rglob(\"*.tif\"))\n",
     "if len(image_files) == 400000:\n",
     "    os.remove(tar_file_path)"
    ]
@@ -173,13 +150,13 @@
     "for label_set in [\"train\", \"val\", \"test\"]:\n",
     "    url = f\"https://huggingface.co/datasets/aharley/rvl_cdip/resolve/main/data/{label_set}.txt?download=true\"\n",
     "    response = requests.get(url, stream=True)\n",
-    "    with open(os.path.join(rvl_cdip_labels_path, f\"{label_set}.txt\"), \"wb\") as f:\n",
+    "    with open(PATHS.labels / f\"{label_set}.txt\", \"wb\") as f:\n",
     "        f.write(response.content)\n",
     "        \n",
     "for additional_file in [\"README.md\", \"dataset_infos.json\"]:\n",
     "    url = f\"https://huggingface.co/datasets/aharley/rvl_cdip/resolve/main/{additional_file}?download=true\"\n",
     "    response = requests.get(url, stream=True)\n",
-    "    with open(os.path.join(raw_rvl_cdip_path, additional_file), \"wb\") as f:\n",
+    "    with open(PATHS.rvl_cdip / additional_file), \"wb\") as f:\n",
     "        f.write(response.content)"
    ]
   }
