--- a/notebooks/1.2-iit-cdip-data-retrieval.ipynb
+++ b/notebooks/1.2-iit-cdip-data-retrieval.ipynb
@@ -16,7 +16,8 @@
     "## README\n",
     "Ce notebook permet de télécharger sur le site \"https://data.nist.gov\" les images et métadonnées de la BDD IIT-CDIP associées aux images RVL-CDIP.\n",
     "\n",
-    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la configuration des répertoires du projet\n",
+    "\n",
     "\n",
     "A l'issue (chapitre 2), il reconstitue la liste des identifiants de documents de la BDD RVL-CDIP qui se trouvent dans le répertoire *rvl_cdip_images_path*.\n",
     "\n",
@@ -41,34 +42,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "19aa7cef-8fd7-4a79-bb0b-af7c06077ee1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7652e965-d7d3-4ab8-8ab6-88fa19674436",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### 1.1 Imports"
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "31f516d3-1792-4ef1-816c-2f50c5750386",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hy/23db37797n9fpwdgt2p3cxfc0000gn/T/ipykernel_596/898921279.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import io\n",
@@ -78,88 +73,6 @@
     "import tarfile\n",
     "import pandas as pd\n",
     "from lxml import etree"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e12ed1e4-c855-43c8-9588-aa7df0a2545e",
-   "metadata": {},
-   "source": [
-    "### 1.2 Variables globales\n",
-    "Pourrait faire l'objet de la mise en place de variables d'environnement, ou d'un fichier de configuration local"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "cfaea39b-5e0c-420e-b1c5-e5c31a6b98b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_path = '/Users/ben/Work/mle/ds-project/mai25_bds_extraction/' # à modifier par chacun en fonction de son arborescence\n",
-    "\n",
-    "data_path = os.path.join(project_path, 'data')\n",
-    "raw_data_path = os.path.join(data_path, 'raw')\n",
-    "extracted_data_path = os.path.join(data_path, 'extracted')\n",
-    "processed_data_path = os.path.join(data_path, 'processed')\n",
-    "\n",
-    "rvl_cdip_images_path = os.path.join(raw_data_path, 'RVL-CDIP', 'images')\n",
-    "iit_cdip_images_path = os.path.join(raw_data_path, 'IIT-CDIP', 'images')\n",
-    "iit_cdip_xmls_path = os.path.join(raw_data_path, 'IIT-CDIP', 'xmls')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37dfa03c-6171-4862-a98d-55e8b6b4810b",
-   "metadata": {},
-   "source": [
-    "### 1.3 Nettoyage des fichiers \".DS_Store\" (utile sur Mac uniquement)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3e255271-17fb-4cc4-a3ec-ae270258c351",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/RVL-CDIP/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesr/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesu/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesz/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagest/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imageso/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesm/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesm/m/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesm/m/i/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesm/m/a/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesm/m/h/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesv/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesq/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesx/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesk/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesk/k/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesk/k/o/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesl/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesy/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesy/y/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesy/y/a/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesp/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/images/imagesw/.DS_Store\n",
-      "Removed: /Users/ben/Work/mle/ds-project/mai25_bds_extraction/data/raw/IIT-CDIP/xmls/.DS_Store\n"
-     ]
-    }
-   ],
-   "source": [
-    "from utils import remove_ds_store_files\n",
-    "remove_ds_store_files(data_path)"
    ]
   },
   {
@@ -200,7 +113,7 @@
    "outputs": [],
    "source": [
     "t = time.time()\n",
-    "df = get_rvl_cdip_image_ids(rvl_cdip_images_path)\n",
+    "df = get_rvl_cdip_image_ids(PATHS.rvl_cdip_images)\n",
     "print(f\"Duree d'exécution: {time.time() - t:.3f} secondes.\")\n",
     "print(f\"({len(df)} images traitées)\\n\")\n",
     "\n",
@@ -254,13 +167,13 @@
     "    missing_ids = []\n",
     "    missing_filenames = []\n",
     "    for id_, filename in zip(ids_list, filenames_list):\n",
-    "        expected_file_path = os.path.join(iit_cdip_images_path, f\"images{id_[0]}\", id_[0], id_[1], id_[2], id_, filename)\n",
+    "        expected_file_path = PATHS.iit_cdip_images / f\"images{id_[0]}\" / id_[0] / id_[1] / id_[2] / id_ / filename\n",
     "        # expected_file_path = \"/Users/ben/Work/mle/ds-project/mai25_bds_extraction/data_sample/raw/IIT-CDIP/images/imagesa/a/a/a/aaa0a000/92464841_4842.tif\"\n",
-    "        image_exists = os.path.exists(expected_file_path)\n",
+    "        image_exists = expected_file_path.exists()\n",
     "        \n",
     "        if also_check_xmls:\n",
-    "            expected_file_path = os.path.join(iit_cdip_images_path, f\"images{id_[0]}\", id_[0], id_[1], id_[2], id_, f\"{id_}.xml\")\n",
-    "            xml_exists = os.path.exists(expected_file_path)\n",
+    "            expected_file_path = PATHS.iit_cdip_images / f\"images{id_[0]}\" / id_[0] / id_[1] / id_[2] / id_ / f\"{id_}.xml\"\n",
+    "            xml_exists = expected_file_path.exists()\n",
     "        else:\n",
     "            xml_exists = True\n",
     "        if not (image_exists and xml_exists):\n",
@@ -283,7 +196,6 @@
     "                    for id_, filename in zip(ids, filenames)] + [\n",
     "        os.path.join(f\"images{id_[0]}\", id_[0], id_[1], id_[2], id_, f\"{id_}.xml\") \n",
     "                    for id_ in ids]\n",
-    "    os.makedirs(iit_cdip_images_path, exist_ok=True)\n",
     "    # exemple d'url d'un dossier d'images sur NIST: \n",
     "    # https://data.nist.gov/od/ds/ark:/88434/mds2-2531/cdip-images/images.a.a.tar\n",
     "    url = f\"{nist_images_base_url}images.{letters[0]}.{letters[1]}.tar\"\n",
@@ -295,7 +207,7 @@
     "    with tarfile.open(fileobj=io.BytesIO(reponse.content), mode=\"r|*\") as archive:\n",
     "        for file in archive:\n",
     "            if file.name in missing_files:\n",
-    "                archive.extract(file, path=iit_cdip_images_path)\n",
+    "                archive.extract(file, path=PATHS.iit_cdip_images)\n",
     "                if file.name.endswith('.tif'):\n",
     "                    tif_amount += 1\n",
     "                else:\n",
@@ -306,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e05555-4c0b-4664-86c6-4ee50b24501a",
+   "id": "c2128fcd-d380-4d43-8c5e-5e135ed861dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,10 +226,10 @@
     "    letters = index\n",
     "    ids_list = serie.document_ids\n",
     "    filenames_list = serie.filenames\n",
-    "    missing_ids, missing_filenames = remove_existing_ids(ids_list, filenames_list, iit_cdip_images_path, also_check_xmls = False)\n",
+    "    missing_ids, missing_filenames = remove_existing_ids(ids_list, filenames_list, PATHS.iit_cdip_images, also_check_xmls = False)\n",
     "    print(f\"Processing letters {letters}: {len(missing_ids)} images to retrieve\")\n",
     "    if missing_ids:\n",
-    "        import_iit_cdip_images_set(letters, missing_ids, missing_filenames, iit_cdip_images_path, iit_cdip_xmls_path, nist_images_base_url)\n"
+    "        import_iit_cdip_images_set(letters, missing_ids, missing_filenames, PATHS.iit_cdip_images, PATHS.iit_cdip_xmls, nist_images_base_url)\n"
    ]
   },
   {
@@ -347,7 +259,7 @@
     "        for gz_info in archive:\n",
     "            letters = gz_info.name[8] + gz_info.name[10]\n",
     "            rvl_ids = rvl_cdip_df[rvl_cdip_df.document_id.str.startswith(letters)].document_id.tolist()\n",
-    "            output_filename = os.path.join(iit_cdip_xmls_path, f\"{letters}.xml\")\n",
+    "            output_filename = PATHS.iit_cdip_xmls / f\"{letters}.xml\"\n",
     "            z_file = archive.extractfile(gz_info)\n",
     "            compressed_data = z_file.read()\n",
     "            decompressed_data = gzip.decompress(compressed_data)\n",
