--- a/notebooks/1.3-DOCUMENTS-dataframe-creation.ipynb
+++ b/notebooks/1.3-DOCUMENTS-dataframe-creation.ipynb
@@ -16,20 +16,34 @@
     "## README\n",
     "Ce notebook permet de créer plusieurs dataframe, qui pourront être utilisées par la suite dans les différents notebook. Pour toutes les dataframe dont les lignes correspondent à des documents, l'index sera l'identifiant du document en question, tel que défini dans le jeu de données IIT_CDIP. Cela garantit l'unicité de cet identifiant, et facilitera pour toute la suite des travaux les jointures entre documents. \n",
     "\n",
-    "Le notebook réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la configuration des répertoires du projet\n",
     "\n",
-    "A l'issue (chapitre 2), il permet de créer les DataFrame utiles à la suite du projet et dont les caractéristiques sont rappelées dans le compte-rendu de projet. \n",
-    "\n",
-    "\n",
-    " **[insérer un résumé ici?]**"
+    "A l'issue (chapitre 2), il permet de créer les DataFrame utiles à la suite du projet et dont les caractéristiques sont rappelées dans le compte-rendu de projet. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a3320b29-b1f3-4ff5-b93a-6909b3d89062",
+   "id": "e8a9fb77-d844-448e-85a6-d083added15c",
    "metadata": {},
    "source": [
     "## 1. Préparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14002c72-907c-45ff-9a05-59a1304eeea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
    ]
   },
   {
@@ -95,13 +109,13 @@
    "source": [
     "def get_documents_base():\n",
     "    tmp_list = []\n",
-    "    for foldername, _, filenames in os.walk(rvl_cdip_images_path):\n",
+    "    for foldername, _, filenames in os.walk(PATHS.rvl_cdip_images):\n",
     "        for filename in filenames:\n",
     "            if filename.endswith(\".tif\"):\n",
     "                tmp_list.append((\n",
     "                    os.path.basename(foldername), \n",
     "                    filename,\n",
-    "                    os.path.join(os.path.relpath(foldername, data_path), filename),\n",
+    "                    os.path.join(os.path.relpath(foldername, PATHS.data), filename),\n",
     "                ))\n",
     "    tmp_list.sort()\n",
     "    return pd.DataFrame(tmp_list, columns = [\"document_id\", \"filename\", \"rvl_image_path\"])"
@@ -139,7 +153,7 @@
     "    data_sets = [\"train.txt\", \"val.txt\", \"test.txt\"]\n",
     "    dataframes = []\n",
     "    for data_set in data_sets:\n",
-    "        df = pd.read_csv(os.path.join(rvl_cdip_labels_path, data_set), sep= ' ', names = [\"image_path\", \"label\"])\n",
+    "        df = pd.read_csv(os.path.join(PATHS.labels, data_set), sep= ' ', names = [\"image_path\", \"label\"])\n",
     "        df.insert(\n",
     "            loc = 0,\n",
     "            column = \"document_id\",\n",
@@ -185,14 +199,14 @@
    "source": [
     "def get_iit_individual_data():\n",
     "    tmp_list = []\n",
-    "    for foldername, _, filenames in os.walk(iit_cdip_images_path):\n",
+    "    for foldername, _, filenames in os.walk(PATHS.iit_cdip_images):\n",
     "        tif_path = None\n",
     "        xml_path = None\n",
     "        for filename in filenames:\n",
     "            if filename.endswith(\".tif\"):\n",
-    "                tif_path = os.path.join(os.path.relpath(foldername, data_path), filename)\n",
+    "                tif_path = os.path.join(os.path.relpath(foldername, PATHS.data), filename)\n",
     "            if filename.endswith(\".xml\"):\n",
-    "                xml_path = os.path.join(os.path.relpath(foldername, data_path), filename)\n",
+    "                xml_path = os.path.join(os.path.relpath(foldername, PATHS.data), filename)\n",
     "        if tif_path or xml_path:\n",
     "            tmp_list.append((\n",
     "                os.path.basename(foldername), \n",
@@ -233,12 +247,12 @@
    "source": [
     "def get_iit_collective_data():\n",
     "    tmp_list = []\n",
-    "    for foldername, _, filenames in os.walk(iit_cdip_xmls_path):\n",
+    "    for foldername, _, filenames in os.walk(PATHS.iit_cdip_xmls):\n",
     "        for filename in filenames:\n",
     "            if filename.endswith(\".xml\"):\n",
-    "                xml_file = os.path.join(os.path.relpath(foldername, data_path), filename)\n",
+    "                xml_file = os.path.join(os.path.relpath(foldername, PATHS.data), filename)\n",
     "                parser = etree.XMLParser(recover=True)\n",
-    "                tree = etree.parse(os.path.join(data_path, xml_file), parser)\n",
+    "                tree = etree.parse(os.path.join(PATHS.data, xml_file), parser)\n",
     "                root = tree.getroot()\n",
     "                ids_in_file = [record.find(\"docid\").text for record in root.findall(\"record\")]\n",
     "                tmp_list += [(id_, xml_file) for id_ in ids_in_file]\n",
@@ -297,7 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ATTENTION: PROBLEME A INVESTIGUER SUR LA COLONNE iit_collective_xml_path:\n",
+    "# on abserve qu'il manque des documents en termes d'xml\n",
+    "# cet aspect sera traité ultérieurement (preprocessing texte)\n",
     "df_documents.isna().sum()"
    ]
   },
@@ -329,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_documents[[]].to_parquet(os.path.join(metadata_data_path, \"df_documents.parquet\"))"
+    "df_documents[[]].to_parquet(os.path.join(PATHS.metadata, \"df_documents.parquet\"))"
    ]
   },
   {
@@ -340,7 +355,7 @@
    "outputs": [],
    "source": [
     "df_documents[['filename', 'rvl_image_path', 'iit_image_path', 'iit_individual_xml_path', 'iit_collective_xml_path']].\\\n",
-    "    to_parquet(os.path.join(metadata_data_path, \"df_filepaths.parquet\"))"
+    "    to_parquet(PATHS.metadata / \"df_filepaths.parquet\")"
    ]
   },
   {
@@ -350,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_documents[[\"label\"]].to_parquet(os.path.join(metadata_data_path, \"df_encoded_labels.parquet\"))"
+    "df_documents[[\"label\"]].to_parquet(PATHS.metadata / \"df_encoded_labels.parquet\")"
    ]
   },
   {
@@ -388,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_documents[[\"label\"]].replace(labels_map).to_parquet(os.path.join(metadata_data_path, \"df_plain_labels.parquet\"))"
+    "df_documents[[\"label\"]].replace(labels_map).to_parquet(PATHS.metadata / \"df_plain_labels.parquet\")"
    ]
   },
   {
@@ -399,7 +414,7 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(labels_map.items(), columns= [\"encoded_label\", \"plain_label\"]).set_index(\"encoded_label\").\\\n",
-    "    to_parquet(os.path.join(metadata_data_path, \"df_labels_mapping.parquet\"))"
+    "    to_parquet(PATHS.metadata / \"df_labels_mapping.parquet\")"
    ]
   },
   {
@@ -409,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_documents[[\"data_set\"]].replace(labels_map).to_parquet(os.path.join(metadata_data_path, \"df_data_sets.parquet\"))"
+    "df_documents[[\"data_set\"]].replace(labels_map).to_parquet(PATHS.metadata / \"df_data_sets.parquet\")"
    ]
   }
  ],
