--- a/notebooks/1.4-DOCUMENTS-SAMPLES-creation.ipynb
+++ b/notebooks/1.4-DOCUMENTS-SAMPLES-creation.ipynb
@@ -17,7 +17,7 @@
     "Ce notebook permet de générer des DataFrames composées d'un échantillon des données contenues dans la DataFrame DOCUMENTS.\n",
     "L'objectif de ces échantillons est de permettre de développer, tester ou appliquer des traitements sur une partie des données, afin de réduire les performances nécessaires, en termes de temps de calcul et d'espace disque requis notamment, afin de rendre possibles certaines opérations en dépit des ressources contraintes qui sont disponibles pour le projet.\n",
     "\n",
-    "Le notebook réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la configuration des répertoires du projet.\n",
     "\n",
     "A l'issue (chapitre 2), il permet de créer, pour 5 tailles prédéfinies, 5 échantillons de la DataFrame documents (25 DataFrames en tout).\n",
     "Chaque DataFrame conserve les mêmes proprtions de targets et de train/val/test que la DataFrame d'origine. Les Dataframe sont nommées ainsi: \n",
@@ -38,6 +38,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a776928f-13e7-4ef7-a83a-d563ed4610fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27a80f19-05e8-400a-9cfa-78c06ae1cbb0",
    "metadata": {},
    "outputs": [],
@@ -46,29 +63,6 @@
     "import itertools\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8fc2081-3618-4bee-ab4e-c7cfd42450e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_path = '/Users/ben/Work/mle/ds-project/mai25_bds_extraction/' # à modifier par chacun en fonction de son arborescence\n",
-    "\n",
-    "data_path = os.path.join(project_path, 'data')\n",
-    "raw_data_path = os.path.join(data_path, 'raw')\n",
-    "extracted_data_path = os.path.join(data_path, 'extracted')\n",
-    "processed_data_path = os.path.join(data_path, 'processed')\n",
-    "metadata_data_path = os.path.join(data_path, 'metadata')\n",
-    "\n",
-    "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
-    "rvl_cdip_images_path = os.path.join(raw_rvl_cdip_path, 'images')\n",
-    "rvl_cdip_labels_path = os.path.join(raw_rvl_cdip_path, 'labels')\n",
-    "\n",
-    "iit_cdip_images_path = os.path.join(raw_data_path, 'IIT-CDIP', 'images')\n",
-    "iit_cdip_xmls_path = os.path.join(raw_data_path, 'IIT-CDIP', 'xmls')"
    ]
   },
   {
@@ -95,8 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(os.path.join(metadata_data_path, \"df_data_sets.parquet\")).\\\n",
-    "    join(pd.read_parquet(os.path.join(metadata_data_path, \"df_encoded_labels.parquet\")))\n",
+    "df = pd.read_parquet(PATHS.metadata / \"df_data_sets.parquet\").\\\n",
+    "    join(pd.read_parquet(PATHS.metadata / \"df_encoded_labels.parquet\"))\n",
     "df['stratifier'] = df.data_set + '/' + df.label.astype(str)\n",
     "df.head()"
    ]
@@ -122,9 +116,7 @@
     "for random_state, (size, identifier) in enumerate(itertools.product(sizes_k, identifiers)):\n",
     "    sample_name = f\"df_documents_sample_{size}k_{identifier}.parquet\"\n",
     "    sample, _ = train_test_split(df, stratify=df.stratifier, train_size= 1000 * size, random_state=random_state)\n",
-    "    if not os.path.exists(os.path.join(metadata_data_path, \"samples\")):\n",
-    "        os.makedirs(os.path.join(metadata_data_path, \"samples\"))\n",
-    "    sample[[]].to_parquet(os.path.join(metadata_data_path, \"samples\", sample_name))"
+    "    sample[[]].to_parquet(PATHS.samples / sample_name)"
    ]
   },
   {
@@ -147,8 +139,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_parquet(os.path.join(metadata_data_path, \"samples\", \"df_documents_sample_1k_3.parquet\")).head()"
+    "pd.read_parquet(os.path.join(PATHS.samples / \"df_documents_sample_1k_3.parquet\")).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "912feb23-a305-41f7-bbc5-ec3a4afd5736",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
